--- a/hello.html
+++ b/hello.html
@@ -24,28 +24,46 @@
             <img src="./assets/smiley-grey.svg" class="little_svg">
             <div class="contact_type">web</div>
         </div>
-        <div class="contact_address">uneventual.io</div>
+        <div class="contact_address">
+            <a href="https://www.uneventual.io">
+                uneventual.io
+            </a>
+        </div>
         
-        <div class="sidebyside  contact_type_container">
+        <!-- <div class="sidebyside  contact_type_container">
             <img src="./assets/camp.svg" class="little_svg">
             <div class="contact_type">emf telephone</div>
         </div>
 
-        <div class="contact_address">lucy (5829)</div>
+        <div class="contact_address">
+            <a href="tel:5829">
+                lucy (5829)
+            </a>
+        </div> -->
  
         <div class="sidebyside contact_type_container">
             <img src="./assets/twitter.svg" class="little_svg">
-            <div class="contact_type">twitter</div>
+            <div class="contact_type"> 
+                    twitter
+            </div>
         </div>
 
-        <div class="contact_address">@uneventual</div>
+        <div class="contact_address">
+            <a href="https://twitter.com/uneventual">
+                @uneventual
+            </a>
+        </div>
  
         <div class="sidebyside contact_type_container">
             <img src="./assets/instagram.svg" class="little_svg">
             <div class="contact_type">instagram</div>
         </div>
 
-        <div class="contact_address">@uneventual</div>
+        <div class="contact_address">
+            <a href="https://www.instagram.com/uneventual/">
+                @uneventual
+            </a>
+        </div>
 
         <div id="secrets"></div>
  
