--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css"> 
     <script src="./age.js"></script>
 
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+
 </head>
 <body>
 
