--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="blurb">
-            say hi! i don't bite (unless you're into that) 
+            say hi! i don't bite 
         </div>
 
         <div class="sidebyside contact_type_container">
